# solana_program_template

./: Cargo.toml
src/: instruction.rs  lib.rs  processor.rs
tests/: tests.rs
